--- a/top.html
+++ b/top.html
@@ -3,15 +3,15 @@
 <head>
 	<meta charset="utf-8">
 	<title>self introduction</title>
-	<link rel="stylesheet" href="../css/reset.css">
-	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="./css/reset.css">
+	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body class="back">
 	<div class="top">
 		Welcome to My Profile
 	</div>
 	<div class="button">
-		<a href="index.html">
+		<a href="./html/index.html">
 			<div class="btn-square-soft">See More</div>
 		</a>
 	</div>
